styles/mapDrag.css
*{
    margin: 0;
    padding: 0;
}


body{
    overflow: hidden;
    cursor: grab;
    background-color: #E3DED4;
}

#move {
    height: 100px;
    width: 100px;
    background: radial-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
    pointer-events: none;
    position: fixed;
    z-index: 10;
}

#mapContainer{
    position: relative;
    width: 100vw;
    height: 100vh;
    text-align: center;
    overflow: scroll;
    -ms-overflow-style: none; 
    scrollbar-width: none; 
}

.map-fill {
    display: block;
    position: absolute;
    height: 100%;
    left: 0;
    top: 0;
}

.click-areas {
    position: absolute;
    height: 100%;
    margin: auto;
    z-index: 5;
    left: 0;
    top:0;
}

#mouseCoords{
    position: fixed;
    top:0;
    left:0;
    color: black;
    z-index: 999;
}

/* Hide scrollbar for Chrome, Safari and Opera */
#mapContainer::-webkit-scrollbar {
    display: none;
}

.scale {
    height: 35px;
}

.bottom-left {
    position: absolute;
    bottom: 8px;
    left: 16px;
}

.top-left {
    position: absolute;
    top: 8px;
    left: 16px;
}

.top-right {
    position: absolute;
    top: 8px;
    right: 16px;
}

.bottom-right {
    position: absolute;
    bottom: 8px;
    right: 16px;
}

.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

map {
 z-index: 2;
}

.clouds {
    position: absolute;
    pointer-events: none;
    animation: fadeOut 4s forwards;
    animation-delay: 2s;
    -webkit-animation: fadeOut 4s forwards;
    -webkit-animation-delay: 2s;
    -moz-animation: fadeOut 4s forwards;
    -moz-animation-delay: 2s;
    -o-animation: fadeOut 4s forwards;
    -o-animation-delay: 2s;
    -ms-animation: fadeOut 4s forwards;
    -ms-animation-delay: 2s;
    z-index: 3;
}

@keyframes fadeOut {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

@-webkit-keyframes fadeOut {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

@-moz-keyframes fadeOut {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

@-o-keyframes fadeOut {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

@-ms-keyframes fadeOut {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

#region-text {
    display: none;
    font-size: 2em;
}

.map-hover-area {
    fill: transparent;
    filter:url(#blurMe);
}

.map-hover-area:hover {
    fill: white;
    opacity: 0.5;
}

